<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_map_info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxWidth="250dp"
            android:maxHeight="200dp"
            android:minWidth="200dp"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_mylocation"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/dialog_map_info_marker_title"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:maxWidth="230dp"
                android:text="@string/title"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?attr/colorAccent" />

            <TextView
                android:id="@+id/dialog_map_info_marker_snippet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:maxWidth="230dp"
                android:text="@string/description" />

            <Button
                android:id="@+id/dialog_map_info_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:backgroundTint="?attr/colorPrimary"
                android:maxWidth="230dp"
                android:text="@string/open_map" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dialog_map_info_arrow"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:paddingBottom="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_map_info_layout"
        app:srcCompat="@drawable/ic_baseline_rounded_arrow"
        app:tint="?attr/colorPrimary"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>